testsuite/poke.pkl/int-type-diag-2.pkl
/* { dg-do compile } */

deftype foo = uint<65>; /* { dg-error "" } */
